[workspace]
members = [
    "galaxy",
    "tools/color_picker",
    "tools/galaxy_math",
    "tools/galaxy_viewer",
]
resolver = "2"

[workspace.dependencies]
argh = "0.1.12"
# bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy = { version = "0.13.2" }
bevy_math = "0.13.2"
bevy_mod_picking = "0.19.1"
bevy_prng = { version = "0.6.0" }
bevy_rand = "0.6.0"
console_error_panic_hook = "^0.1.7"
galaxy = { path = "galaxy" }
galaxy_math = { path = "tools/galaxy_math" }
log = "0.4.22"
rand = "0.8.5"
rand_core = "0.6.4"
rand_distr = "0.4.3"
wasm-bindgen = "0.2.95"
web-sys = "0.3.69"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
# Expensive optimizations
# lto = true
# codegen-units = 1
