[package]
name = "galaxy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
bevy_math = { workspace = true }
bevy_mod_picking = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = ["Location", "Window", "console"] }
